--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url('https://thumbs.gfycat.com/AffectionateDesertedGoa-max-1mb.gif');
-   /* background-repeat: no-repeat;
+  background-image: url('https://i.makeagif.com/media/8-11-2018/jET9FZ.gif');
+   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100% 100%; */
+  background-size: 100% 100%;
 }
 .navbar {
   margin: 30px 70px;
@@ -22,7 +22,7 @@ h1{
   margin-top: 45px;
 }
 .ima{
-  margin: 110px 40px;
+  margin: 110px 80px;
 }
 span{
   color:blue;
