--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 body {
-  background-image: url('https://i.makeagif.com/media/8-11-2018/jET9FZ.gif');
+  background-image: url('https://static.wixstatic.com/media/f3c3a9_b6581774802b4c0bb70bec5c25b2869a~mv2.gif');
    background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
 }
+/* https://i.makeagif.com/media/8-11-2018/jET9FZ.gif */
 .navbar {
   margin: 30px 70px;
 }
@@ -13,38 +14,41 @@ body {
     margin:8px;
 }
 h1{
-  color:white;
+  color:rgb(255, 252, 252);
   font-size:50px;
-  margin:60px 30px;
+  margin:60px 0px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .image{
   margin-bottom: 10px;
   margin-top: 45px;
 }
 .ima{
-  margin: 110px 200px;
+  margin: 160px 200px;
 }
 span{
-  color:blue;
+  color:rgb(0, 255, 0);
 }
 .head {
   font-size:40px;
   text-align: left;
-  color:blue;
+  color:rgb(0, 255, 0);
   font-style: bold;
 }
 p {
-  font-size:22px;
+  font-size:25px;
   text-align: justify;
-  color:white;
-  font-style: italic;
+  color:rgb(255, 255, 255);
+  font-style: bold;
   margin:30px 0px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .bottom{
   text-align: center;
   color:white;
-  font-size:22px;
+  font-size:23px;
   font-style: italic;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin-bottom:50px;
 }
 .container{
