--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 body {
-  background-image: url('https://static.wixstatic.com/media/f3c3a9_b6581774802b4c0bb70bec5c25b2869a~mv2.gif');
-   background-repeat: no-repeat;
+  background-image: url('c:\Users\somu\Desktop\background.jpg');
+  background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
 }
-/* https://i.makeagif.com/media/8-11-2018/jET9FZ.gif */
+
 .navbar {
-  margin: 30px 70px;
+  margin: 70px 200px;
 }
 
 .btn{
-    font-size:20px;
+    font-size:25px;
     margin:8px;
+    color: aqua;
+    font-family: "Sofia", sans-serif;
+    text-shadow: 2px 2px 2px #ababab;
 }
 h1{
   color:rgb(255, 252, 252);
-  font-size:50px;
-  margin:60px 0px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size:40px;
+  margin:50px 0px;
+  font-family: Georgia, serif;
 }
 .image{
   margin-bottom: 10px;
-  margin-top: 45px;
+  margin-top: 0px;
 }
 .ima{
   margin: 160px 200px;
 }
 span{
-  color:rgb(0, 255, 0);
+  color:aqua;
 }
 .head {
   font-size:40px;
   text-align: left;
-  color:rgb(0, 255, 0);
+  color:aqua;
   font-style: bold;
 }
 p {
